--- a/ur5_moveit_config/package.xml
+++ b/ur5_moveit_config/package.xml
@@ -1,30 +1,31 @@
 <package>
 
   <name>ur5_moveit_config</name>
-  <version>1.1.6</version>
+  <version>0.3.0</version>
   <description>
      An automatically generated package with all the configuration and launch files for using the ur5 with the MoveIt Motion Planning Framework
   </description>
-  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
-  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>
-  
+  <author email="l.rubiorod@gmail.com">Luis</author>
+  <maintainer email="l.rubiorod@gmail.com">Luis</maintainer>
+
   <license>BSD</license>
 
   <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>
+  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
+  <url type="repository">https://github.com/ros-planning/moveit</url>
 
   <run_depend>moveit_ros_move_group</run_depend>
   <run_depend>moveit_planners_ompl</run_depend>
   <run_depend>moveit_ros_visualization</run_depend>
-  <run_depend>moveit_plugins</run_depend>
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>xacro</run_depend>
+  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
+  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
   <build_depend>ur_description</build_depend>
   <run_depend>ur_description</run_depend>
 
 
   <buildtool_depend>catkin</buildtool_depend>
-  
+
 </package>
